offscreen fix

--- a/styles/popup.css
+++ b/styles/popup.css
@@ -1,16 +1,26 @@
 body {
     width: 20em;
-    height: 9em;
+    height: 11em;
     font-size: 18px;
     background-color: #e6f5f1;
 
 }
 
+.heading {
+    display: flex;
+    justify-content: center;
+    color: #2282ad;
+    font-size: 1.3em;
+    text-shadow: 2px 2px 4px #d3e6ef
+}
 .container-fluid {
     margin-right: auto;
     margin-left: auto;
     padding-right: 15px;
     padding-left: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .form-group {
     display: flex;
@@ -45,6 +55,11 @@ body {
     text-align: center;
 }
 
+.mg-left {
+    margin-left: 2rem;
+
+}
+
 .mt-2 {
     margin-top: 0.5rem !important;
 }
@@ -63,11 +78,11 @@ body {
     -moz-user-select: none;
     -ms-user-select: none;
     user-select: none;
-    background-color: #28a745;
-    border-color: #28a745;
-    padding: 0.375rem 0.3rem;
-    font-size: 0.7rem;
-    line-height: 1;
+    background-color: #2282ad;
+    border-color: #2282ad;
+    padding: 0.375rem 0.75rem;
+    font-size: 1rem;
+    line-height: 1.1;
     border-radius: 0.25rem;
     transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
@@ -76,6 +91,11 @@ body {
     color: #fff;
     background-color: #28a745;
     border-color: #28a745;
+}
+
+
+.links {
+    text-decoration-line: none;
 }
 
 .btn-fail {
@@ -101,6 +121,11 @@ body {
     position: absolute;
     margin-top: 0.3rem;
     margin-left: -1.25rem;
+}
+
+.center {
+    display: flex;
+    justify-content: center;
 }
 
 .me-2 {
